# dialect

./: README.md  pyproject.toml  setup.py
dialect/: __main__.py  context.py  engine.py  lex.py  macro.py  main.py  parse.py  parser.out  parsetab.py  stdlib.py
examples/: basic_macro.dt  basic_types.dt  classes.dt  control_flow.dt  import.dt  other.dt  stdlib.dt  test.dt  with.dt
src/: context.py  engine.py  lex.py  macro.py  main.py  parse.py  parser.out  parsetab.py  stdlib.py  util.py
