[tool.poetry]
name = "dialect"
version = "0.1.0"
description = ""
authors = ["Alex Covington <alex@covington.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dialect = 'src/main:main'
